--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
     height: 400px;
     border: 1px solid black;
 
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16,1fr);
+    /* grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16,1fr); */
 
 
     }
