--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,47 @@
 .parent {
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    background-color: white;
     display: grid;
     width: 400px;
     height: 400px;
-    border: 1px solid black;
+    float: left;    
+}
+.settings{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px;
+}
 
-    /* grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16,1fr); */
+.button {
+    background-color: #343A40;;
+    color: #FFF;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#rainbow:hover{
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+}
 
 
-    }
+body {
+    background: linear-gradient(45deg,blue,gray,black);
+    height: 100vh;
+}
+
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+.header {
+    display: flex;
+    justify-content: center;
+}
 
 .item {
     display: inline-grid;
